--- a/assets/css/bootstrap-formhelpers.css
+++ b/assets/css/bootstrap-formhelpers.css
@@ -1,5 +1,5 @@
 /*!
- * Bootstrap Form Helpers v1.1.2
+ * Bootstrap Form Helpers v1.2.0
  *
  * Copyright 2012 Vincent Lamanna, Inc
  * Licensed under the Apache License v2.0
@@ -143,7 +143,8 @@
 
 .selectbox-options ul {
   max-height: 200px;
-  overflow: auto;
+  overflow-x: hidden;
+  overflow-y: auto;
   margin: 5px 0 0 0;
   width: 240px;
 }
