--- a/css/bootstrap-formhelpers-countries.flags.css
+++ b/css/bootstrap-formhelpers-countries.flags.css
@@ -1,5 +1,5 @@
 /*!
- * Bootstrap Form Helpers v1.3.1
+ * Bootstrap Form Helpers
  *
  * Copyright 2012 Vincent Lamanna, Inc
  * Licensed under the Apache License v2.0
