--- a/docs/assets/css/bootstrap-formhelpers.css
+++ b/docs/assets/css/bootstrap-formhelpers.css
@@ -187,3 +187,82 @@
 span.countries {
   line-height: 18px;
 }
+
+table.calendar {
+  width: 376px;
+  background: #fff;
+}
+
+table.calendar .months-header > th {
+  text-align: center;
+  font-size: 12px;
+  width: 100px;
+}
+
+table.calendar .days-header > th {
+  text-align: center;
+  font-size: 11px;
+  line-height: 12px;
+  width: 100px;
+}
+
+table.calendar > tbody > tr > td {
+  text-align: center;
+  font-size: 11px;
+  line-height: 12px;
+  width: 100px;
+}
+
+table.calendar > tbody > tr > td.today {
+	background-color: #999;
+	color: #fff;
+	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+}
+
+table.calendar > tbody > tr > td.off {
+	color: #aaa;
+}
+
+.datepicker {
+  position: relative;
+}
+
+.datepicker-toggle {
+  *margin-bottom: -3px;
+}
+
+.datepicker-calendar {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  z-index: 1000;
+  display: none;
+  float: left;
+  min-width: 160px;
+}
+
+.datepicker-calendar.pull-right {
+  right: 0;
+  left: auto;
+}
+
+.open > .datepicker-calendar {
+  display: block;
+}
+
+.datepicker-calendar > table > tbody > tr > td:not(.off):hover {
+  cursor: pointer;
+  color: #ffffff;
+  text-decoration: none;
+  background-color: #0088cc;
+  background-color: #0081c2;
+  background-image: linear-gradient(to bottom, #0088cc, #0077b3);
+  background-image: -moz-linear-gradient(top, #0088cc, #0077b3);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0077b3));
+  background-image: -webkit-linear-gradient(top, #0088cc, #0077b3);
+  background-image: -o-linear-gradient(top, #0088cc, #0077b3);
+  background-repeat: repeat-x;
+  outline: 0;
+  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0077b3', GradientType=0);
+}
+
