--- a/css/bootstrap-formhelpers.css
+++ b/css/bootstrap-formhelpers.css
@@ -78,6 +78,9 @@
   color: #333333;
   white-space: nowrap;
   text-decoration: none;
+  -webkit-border-radius: 6px;
+     -moz-border-radius: 6px;
+          border-radius: 6px;
 }
 
 .bfh-googlefonts .bfh-selectbox-options a {
