--- a/css/bootstrap-formhelpers.css
+++ b/css/bootstrap-formhelpers.css
@@ -64,17 +64,25 @@
 }
 
 .bfh-selectbox-options ul::-webkit-scrollbar {
-    width: 15px;
+  width: 15px;
 }
  
 .bfh-selectbox-options ul::-webkit-scrollbar-thumb {
-    border-radius: 5px;
-    background: #08c;
+  background-color: #0088cc;
+  background-color: #0081c2;
+  background-image: -moz-linear-gradient(top, #0088cc, #0077b3);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0077b3));
+  background-image: -webkit-linear-gradient(top, #0088cc, #0077b3);
+  background-image: -o-linear-gradient(top, #0088cc, #0077b3);
+  background-image: linear-gradient(to bottom, #0088cc, #0077b3);
+  -webkit-border-radius: 6px;
+     -moz-border-radius: 6px;
+          border-radius: 6px;
 }
 
 .bfh-selectbox-options ul::-webkit-scrollbar-button {
-	width: 0; 
-	height: 0;
+  width: 0; 
+  height: 0;
 }
 
 .bfh-selectbox-options.pull-right {
