--- a/docs/assets/css/bootstrap-formhelpers.css
+++ b/docs/assets/css/bootstrap-formhelpers.css
@@ -63,6 +63,28 @@
   list-style: none;
 }
 
+.bfh-selectbox-options ul::-webkit-scrollbar {
+  width: 15px;
+}
+ 
+.bfh-selectbox-options ul::-webkit-scrollbar-thumb {
+  background-color: #0088cc;
+  background-color: #0081c2;
+  background-image: -moz-linear-gradient(top, #0088cc, #0077b3);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0077b3));
+  background-image: -webkit-linear-gradient(top, #0088cc, #0077b3);
+  background-image: -o-linear-gradient(top, #0088cc, #0077b3);
+  background-image: linear-gradient(to bottom, #0088cc, #0077b3);
+  -webkit-border-radius: 6px;
+     -moz-border-radius: 6px;
+          border-radius: 6px;
+}
+
+.bfh-selectbox-options ul::-webkit-scrollbar-button {
+  width: 0; 
+  height: 0;
+}
+
 .bfh-selectbox-options.pull-right {
   right: 0;
   left: auto;
@@ -78,6 +100,9 @@
   color: #333333;
   white-space: nowrap;
   text-decoration: none;
+  -webkit-border-radius: 6px;
+     -moz-border-radius: 6px;
+          border-radius: 6px;
 }
 
 .bfh-googlefonts .bfh-selectbox-options a {
@@ -327,4 +352,29 @@ span.bfh-countries {
 
 .open > .bfh-timepicker-popover {
   display: block;
+}
+
+.form-horizontal .controls a.bfh-selectbox-toggle {
+  width: 210px;
+  vertical-align: middle;
+}
+
+.form-horizontal .control-group.error a {
+  color: #b94a48;
+  border-color: #b94a48;
+}
+
+.form-horizontal .control-group.success a {
+    color: #468847;
+    border-color: #468847;
+}
+
+.form-horizontal .control-group.info a {
+    color: #3a87ad;
+    border-color: #3a87ad;
+}
+
+.form-horizontal .control-group.warning a {
+    color: #c09853;
+    border-color: #c09853;
 }
