--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,14 @@
     {% include header.html %}
   </head>
   <body>
+    <!-- Start Alexa Certify Javascript -->
+    <script type="text/javascript">
+    _atrk_opts = { atrk_acct:"uQnbh1acOh00wy", domain:"bootstrapformhelpers.com",dynamic: true};
+    (function() { var as = document.createElement('script'); as.type = 'text/javascript'; as.async = true; as.src = "https://d31qbv1cthcecs.cloudfront.net/atrk.js"; var s = document.getElementsByTagName('script')[0];s.parentNode.insertBefore(as, s); })();
+    </script>
+    <noscript><img src="https://d5nxst8fruw4z.cloudfront.net/atrk.gif?account=uQnbh1acOh00wy" style="display:none" height="1" width="1" alt="" /></noscript>
+    <!-- End Alexa Certify Javascript -->
+
     <a class="sr-only" href="#content">Skip to main content</a>
     
     <!-- Docs master nav -->
