--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,6 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="{{ page.description }}">
 <meta name="author" content="Vincent Lamanna">
+<meta name="alexaVerifyID" content="gC3ErhZLExlOHnSLM-nYxhRU_a8" />
 
 <title>{{ page.title }} &middot; Bootstrap Form Helpers</title>
 
