--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,7 +54,7 @@
         <p>Designed and built by <a href="http://twitter.com/vincentlamanna" target="_blank">@vincentlamanna</a>.</p>
         <p>Code licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0" target="_blank">Apache License v2.0</a>. Documentation licensed under <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.</p>
         <p>Icons from <a href="http://glyphicons.com">Glyphicons Free</a>, licensed under <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.</p>
-        <p>Flags from <a href="http://www.gosquared.com">GoSquared</a>, licensed under <a href="assets/img/bootstrap-formhelpers-countries.flags-LICENSE.txt">GoSquared</a>.</p>
+        <p>Flags from <a href="http://www.gosquared.com">GoSquared</a>, licensed under <a href="{{ page.base_url }}assets/img/bootstrap-formhelpers-countries.flags-LICENSE.txt">GoSquared</a>.</p>
       </div>
     </footer>
 
