Wrapping unit tests.

--- a/less/bootstrap-formhelpers-datepicker.less
+++ b/less/bootstrap-formhelpers-datepicker.less
@@ -70,8 +70,9 @@
 .bfh-datepicker-toggle {
   *margin-bottom: -3px;
   
-  > input {
-    cursor: default;
+  > input[readonly] {
+    cursor: inherit;
+    background-color: inherit;
   }
 }
 
