--- a/less/bootstrap-formhelpers-googlefonts.less
+++ b/less/bootstrap-formhelpers-googlefonts.less
@@ -5,6 +5,7 @@
 .bfh-googlefonts .bfh-selectbox-options {
   a {
     height: 30px;
+    width: 230px;
     text-indent: -9999px;
     background-image: url(../img/bootstrap-formhelpers-googlefonts.png);
     
