--- a/less/bootstrap-formhelpers-timepicker.less
+++ b/less/bootstrap-formhelpers-timepicker.less
@@ -1,3 +1,7 @@
+//
+// Time Picker
+// --------------------------------------------------
+
 .bfh-timepicker-popover {
   position: absolute;
   top: 100%;
@@ -44,8 +48,9 @@
 .bfh-timepicker-toggle {
   *margin-bottom: -3px;
   
-  > input {
-    cursor: default;
+  > input[readonly] {
+    cursor: inherit;
+    background-color: inherit;
   }
 }
 
