Attempt to fix an IE bug.

--- a/less/bootstrap-formhelpers-selectbox.less
+++ b/less/bootstrap-formhelpers-selectbox.less
@@ -55,6 +55,11 @@
       .nav-divider(@select-divider-bg);
     }
 
+    .bfh-selectbox-filter-container {
+      width: 100%;
+      padding: 5px;
+    }
+    
     ul {
       list-style: none;
       max-height: @select-height-base;
