--- a/_includes/social-main.html
+++ b/_includes/social-main.html
@@ -8,9 +8,6 @@
 		<iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=vlamanna&amp;repo=BootstrapFormHelpers&amp;type=fork&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" style="width: 98px; height: 20px;"></iframe>
 	  </li>
 	  <li>
-	    <iframe src="//www.facebook.com/plugins/follow.php?href=http%3A%2F%2Fwww.facebook.com%2Fbootstrapfh&amp;width&amp;height=21&amp;colorscheme=light&amp;layout=button_count&amp;show_faces=false&amp;appId=177800958940830" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width: 100px; height:20px;" allowTransparency="true"></iframe>
-	  </li>
-	  <li>
 	    <a href="https://twitter.com/bootstrapfh" class="twitter-follow-button" data-show-count="false">Follow @bootstrapfh</a>
         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 	  </li>
@@ -26,6 +23,9 @@
 			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
 		  })();
 		</script>
+	  </li>
+	  <li>
+	    <iframe src="//www.facebook.com/plugins/like.php?href=https%3A%2F%2Ffacebook.com%2Fbootstrapfh&amp;width&amp;layout=button_count&amp;action=like&amp;show_faces=false&amp;share=false&amp;height=21&amp;appId=179349218895862" scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:20px;" allowTransparency="true"></iframe>
 	  </li>
 	</ul>
   </div>
