--- a/assets/css/doc.css
+++ b/assets/css/doc.css
@@ -118,3 +118,11 @@ footer {
   -moz-border-radius: 4px 0 4px 0;
   border-radius: 4px 0 4px 0;
 }
+
+.carousel-caption {
+  padding-top: 0;
+  background-color: rgba(0,0,0,0.5);
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  border-radius: 6px;
+}
