--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -7,13 +7,15 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a style="height:32px;margin-top:-6px;" class="navbar-brand" href="#"><img style="width:32px;height:32px;" src="{{ page.base_url }}assets/img/logo.png" alt="jQuery Plugins - Bootstrap Form Helpers" class="img-circle"> Bootstrap Form Helpers</a>
+    <a style="height:32px;margin-top:-6px;" class="navbar-brand" href="/"><img style="width:32px;height:32px;" src="{{ page.base_url }}assets/img/logo.png" alt="jQuery Plugins - Bootstrap Form Helpers" class="img-circle"> Bootstrap Form Helpers</a>
   </div>
   
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse navbar-ex1-collapse">
     <ul class="nav navbar-nav">
       <li><a href="/">Home</a></li>
+      <li><a href="/buy/">Buy</a></li>
+      <li><a href="/support/">Support</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
 	  <li style="padding: 10px;margin-right: 10px;">
