--- a/_includes/nav-plugins.html
+++ b/_includes/nav-plugins.html
@@ -1,4 +1,5 @@
 <li><a href="{{ page.base_url }}">Overview</a></li>
+<li><a href="{{ page.base_url }}gettingstarted/">Getting Started</a></li>
 <li><a href="{{ page.base_url }}select/">Select</a></li>
 <li><a href="{{ page.base_url }}country/">Country Picker</a></li>
 <li><a href="{{ page.base_url }}state/">State Picker</a></li>
