--- a/_includes/jumbotron-main.html
+++ b/_includes/jumbotron-main.html
@@ -2,9 +2,10 @@
   <div class="container">
     <h2>Bootstrap Form Helpers</h2>
     <p class="lead">Extend Bootstrap — now with 12 custom jQuery plugins.</p>
-    <p><a href="https://github.com/vlamanna/BootstrapFormHelpers/zipball/master" class="btn btn-primary btn-lg">Download Bootstrap Form Helpers</a></p>
+    <p><a href="https://github.com/vlamanna/BootstrapFormHelpers/zipball/master" onclick="ga('send', 'event', 'button', 'click', 'download');" class="btn btn-default btn-lg">Download Bootstrap Form Helpers</a></p>
+    <p style="color: #ececec;"> or <a href="{{ page.base_url }}buy/" onclick="ga('send', 'event', 'button', 'click', 'buy');" class="btn btn-primary btn-lg">Buy Now</a></p>
     <ul class="masthead-links">
-	  <li><a href="https://github.com/vlamanna/BootstrapFormHelpers">GitHub project</a></li>
+	  <li><a href="https://github.com/vlamanna/BootstrapFormHelpers" onclick="ga('send', 'event', 'button', 'click', 'source');">GitHub project</a></li>
 	  <li>Version 1.9.1</li>
 	</ul>
   </div>
