--- a/_includes/ads-skyscraper.html
+++ b/_includes/ads-skyscraper.html
@@ -1,4 +1,4 @@
-<div>
+<div class="visible-lg visible-md" style="border: 1px solid #eee; padding: 20px; text-align: center; height: 640px;">
   <script type="text/javascript"><!--
   google_ad_client = "ca-pub-1024496565678366";
   /* BootstrapSky */
