--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,11 +37,11 @@
         </div>
         <div class="col-md-9" role="main">
           {% include title.html %}
-          <div class="hidden-print" role="complementary">
+          <div style="height: 110px; padding-bottom: 20px; border-bottom: 1px solid #eee;" class="hidden-print" role="complementary">
             {% include ads-leaderboard.html %}
           </div>
           {{ content }}
-          <div class="hidden-print" role="complementary">
+          <div style="height: 130px; padding-bottom: 20px; border-bottom: 1px solid #eee; border-top: 1px solid #eee; padding-top: 20px;" class="hidden-print" role="complementary">
             {% include ads-leaderboard.html %}
           </div>
         </div>
