Adding special offer.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,6 +18,20 @@
 <script src="{{ page.base_url }}assets/js/bootstrap.min.js"></script>
 <script src="{{ page.base_url }}assets/js/bootstrap-formhelpers.min.js"></script>
 
+<!-- AddThis Smart Layers BEGIN -->
+<!-- Go to http://www.addthis.com/get/smart-layers to customize -->
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4df14df26c87e5bd"></script>
+<script type="text/javascript">
+  addthis.layers({
+    'theme' : 'light',
+    'share' : {
+      'position' : 'right',
+      'numPreferredServices' : 5
+    }   
+  });
+</script>
+<!-- AddThis Smart Layers END -->
+
 <script>
   $(document.links).filter(function() {
     return this.hostname != window.location.hostname;
