--- a/_includes/jumbotron-main.html
+++ b/_includes/jumbotron-main.html
@@ -8,5 +8,8 @@
 	  <li><a href="https://github.com/vlamanna/BootstrapFormHelpers" onclick="ga('send', 'event', 'button', 'click', 'source');">GitHub project</a></li>
 	  <li>Version 2.0.0</li>
 	</ul>
+	<div><p style="color: #ececec; font-size: 14px;">
+      <strong>Release 2.0 Special Offer!</strong> Until December 1st, get 50% off when you buy a commercial license!
+	</p></div>
   </div>
 </div>
