--- a/less/bootstrap-formhelpers-variables.less
+++ b/less/bootstrap-formhelpers-variables.less
@@ -66,6 +66,13 @@
 @timepicker-fallback-border:     #ccc;
 @timepicker-width-base:          180px;
 
+// Slider Variables
+@slider-bg:                      #fff;
+@slider-border:                  rgba(0,0,0,.15);
+@slider-fallback-border:         #ccc;
+@slider-handle-bg:               #efefef;
+@slider-disabled-color:     @gray-light;
+
 // Z-Indexes
 @zindex-select:                  1000;
 @zindex-datepicker:              1000;
