--- a/less/bootstrap-formhelpers.less
+++ b/less/bootstrap-formhelpers.less
@@ -10,3 +10,4 @@
 @import "bootstrap-formhelpers-googlefonts.less";
 @import "bootstrap-formhelpers-datepicker.less";
 @import "bootstrap-formhelpers-timepicker.less";
+@import "bootstrap-formhelpers-slider.less";
