--- a/_includes/nav-plugins.html
+++ b/_includes/nav-plugins.html
@@ -3,6 +3,7 @@
 <li><a href="{{ page.base_url }}select/">Select</a></li>
 <li><a href="{{ page.base_url }}datepicker/">Date Picker</a></li>
 <li><a href="{{ page.base_url }}timepicker/">Time Picker</a></li>
+<li><a href="{{ page.base_url }}slider/">Slider</a></li>
 <li><a href="{{ page.base_url }}phone/">Phone Input</a></li>
 <li><a href="{{ page.base_url }}country/">Country Picker</a></li>
 <li><a href="{{ page.base_url }}state/">State Picker</a></li>
