--- a/_includes/nav-plugins.html
+++ b/_includes/nav-plugins.html
@@ -1,15 +1,15 @@
-<li><a href="{{ page.base_url }}">Overview</a></li>
-<li><a href="{{ page.base_url }}gettingstarted/">Getting Started</a></li>
-<li><a href="{{ page.base_url }}select/">Select</a></li>
-<li><a href="{{ page.base_url }}datepicker/">Date Picker</a></li>
-<li><a href="{{ page.base_url }}timepicker/">Time Picker</a></li>
-<li><a href="{{ page.base_url }}slider/">Slider</a></li>
-<li><a href="{{ page.base_url }}phone/">Phone Input</a></li>
-<li><a href="{{ page.base_url }}country/">Country Picker</a></li>
-<li><a href="{{ page.base_url }}state/">State Picker</a></li>
-<li><a href="{{ page.base_url }}currency/">Currency Picker</a></li>
-<li><a href="{{ page.base_url }}language/">Language Picker</a></li>
-<li><a href="{{ page.base_url }}timezone/">Timezone Picker</a></li>
-<li><a href="{{ page.base_url }}googlefont/">Google Font Picker</a></li>
-<li><a href="{{ page.base_url }}font/">Font Picker</a></li>
-<li><a href="{{ page.base_url }}fontsize/">Font Size Picker</a></li>
+<li><a href="{{ page.base_url }}#jquery-plugins">Overview</a></li>
+<li><a href="{{ page.base_url }}gettingstarted/#jquery-plugins">Getting Started</a></li>
+<li><a href="{{ page.base_url }}select/#jquery-plugins">Select</a></li>
+<li><a href="{{ page.base_url }}datepicker/#jquery-plugins">Date Picker</a></li>
+<li><a href="{{ page.base_url }}timepicker/#jquery-plugins">Time Picker</a></li>
+<li><a href="{{ page.base_url }}slider/#jquery-plugins">Slider</a></li>
+<li><a href="{{ page.base_url }}phone/#jquery-plugins">Phone Input</a></li>
+<li><a href="{{ page.base_url }}country/#jquery-plugins">Country Picker</a></li>
+<li><a href="{{ page.base_url }}state/#jquery-plugins">State Picker</a></li>
+<li><a href="{{ page.base_url }}currency/#jquery-plugins">Currency Picker</a></li>
+<li><a href="{{ page.base_url }}language/#jquery-plugins">Language Picker</a></li>
+<li><a href="{{ page.base_url }}timezone/#jquery-plugins">Timezone Picker</a></li>
+<li><a href="{{ page.base_url }}googlefont/#jquery-plugins">Google Font Picker</a></li>
+<li><a href="{{ page.base_url }}font/#jquery-plugins">Font Picker</a></li>
+<li><a href="{{ page.base_url }}fontsize/#jquery-plugins">Font Size Picker</a></li>
