--- a/less/bootstrap-formhelpers-slider.less
+++ b/less/bootstrap-formhelpers-slider.less
@@ -24,7 +24,7 @@
     border: 1px solid @slider-border;
     border-radius: @border-radius-base;
     margin-top: -7px;
-    cursor: pointer;
+    cursor: col-resize;
   
     > .bfh-slider-value {
       margin-top: 5px;
@@ -36,7 +36,7 @@
       border-radius: @border-radius-base;
       height: 20px;
       line-height: 20px;
-      cursor: pointer;
+      cursor: col-resize;
       background-color: @slider-bg;
       margin-left: -15px;
       
