--- a/less/bootstrap-formhelpers-variables.less
+++ b/less/bootstrap-formhelpers-variables.less
@@ -66,6 +66,12 @@
 @timepicker-fallback-border:     #ccc;
 @timepicker-width-base:          180px;
 
+// Color Picker Variables
+@colorpicker-bg:                 #fff;
+@colorpicker-border:             rgba(0,0,0,.15);
+@colorpicker-fallback-border:    #ccc;
+@colorpicker-width-base:         180px;
+
 // Slider Variables
 @slider-bg:                      #fff;
 @slider-border:                  rgba(0,0,0,.15);
@@ -77,3 +83,4 @@
 @zindex-select:                  1000;
 @zindex-datepicker:              1000;
 @zindex-timepicker:              1000;
+@zindex-colorpicker:             1000;
