--- a/less/bootstrap-formhelpers.less
+++ b/less/bootstrap-formhelpers.less
@@ -11,3 +11,4 @@
 @import "bootstrap-formhelpers-datepicker.less";
 @import "bootstrap-formhelpers-timepicker.less";
 @import "bootstrap-formhelpers-slider.less";
+@import "bootstrap-formhelpers-colorpicker.less";
