Adding default cursor on color picker.

--- a/less/bootstrap-formhelpers-colorpicker.less
+++ b/less/bootstrap-formhelpers-colorpicker.less
@@ -17,6 +17,7 @@
   .box-shadow(0 6px 12px rgba(0,0,0,.175));
   background-clip: padding-box;
   padding: 20px;
+  cursor: default;
   
   > canvas {
     width: 384px;
