--- a/less/bootstrap-formhelpers.less
+++ b/less/bootstrap-formhelpers.less
@@ -12,3 +12,4 @@
 @import "bootstrap-formhelpers-timepicker.less";
 @import "bootstrap-formhelpers-slider.less";
 @import "bootstrap-formhelpers-colorpicker.less";
+@import "bootstrap-formhelpers-number.less";
