Adding number input.

--- a/_includes/nav-plugins.html
+++ b/_includes/nav-plugins.html
@@ -6,6 +6,7 @@
 <li><a href="{{ page.base_url }}timepicker/#jquery-plugins">Time Picker</a></li>
 <li><a href="{{ page.base_url }}slider/#jquery-plugins">Slider</a></li>
 <li><a href="{{ page.base_url }}phone/#jquery-plugins">Phone Input</a></li>
+<li><a href="{{ page.base_url }}number/#jquery-plugins">Number Input</a></li>
 <li><a href="{{ page.base_url }}country/#jquery-plugins">Country Picker</a></li>
 <li><a href="{{ page.base_url }}state/#jquery-plugins">State Picker</a></li>
 <li><a href="{{ page.base_url }}currency/#jquery-plugins">Currency Picker</a></li>
