--- a/less/bootstrap-formhelpers-timepicker.less
+++ b/less/bootstrap-formhelpers-timepicker.less
@@ -26,16 +26,14 @@
       border: 0;
       
       &.separator {
-        line-height: 65px;
+        line-height: 28px;
         font-weight: bold;
         font-size: 20px;
       }
       
-      > input {
-        margin: 0;
+      > div > input {
         text-align: center;
-        cursor: default;
-        width: 60px;
+        width: 42px !important;
       }
     }
   }
