--- a/_includes/jumbotron-main.html
+++ b/_includes/jumbotron-main.html
@@ -9,7 +9,7 @@
 	  <li>Version 2.3.0</li>
 	</ul>
 	<div><p style="color: #ececec; font-size: 14px;">
-      <strong>Release 2.0 Special Offer!</strong> Until December 1st, get 50% off when you buy a commercial license!
+      <strong>Hurry up!</strong> One day left to get 50% off when you buy a commercial license!
 	</p></div>
   </div>
 </div>
