--- a/_includes/jumbotron-main.html
+++ b/_includes/jumbotron-main.html
@@ -8,5 +8,10 @@
 	  <li><a href="https://github.com/vlamanna/BootstrapFormHelpers" onclick="ga('send', 'event', 'button', 'click', 'source');">GitHub project</a></li>
 	  <li>Version 2.3.0</li>
 	</ul>
+    <div>
+      <p style="color: #ececec; font-size: 14px;">
+        <strong>Today Only!</strong> Huge savings when you buy a commercial license!
+      </p>
+    </div>
   </div>
 </div>
