--- a/_includes/ads-leaderboard.html
+++ b/_includes/ads-leaderboard.html
@@ -1,11 +1,9 @@
-<script type="text/javascript"><!--
-google_ad_client = "ca-pub-1024496565678366";
-/* BootstrapFormHelpers */
-google_ad_slot = "7047021726";
-google_ad_width = 728;
-google_ad_height = 90;
-//-->
-</script>
-<script type="text/javascript"
-src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- AdsLeaderboard-728x90 -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-6835174711968682"
+     data-ad-slot="1530981641"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
 </script>
