Initial Test for the New Design
Added a custom CSS to overwrite existing

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
 <link href="{{ page.base_url }}assets/css/bootstrap.min.css" rel="stylesheet">
 <link href="{{ page.base_url }}assets/css/bootstrap-formhelpers.min.css" rel="stylesheet">
 <link href="{{ page.base_url }}assets/css/doc.css" rel="stylesheet">
-
+<link href="{{ page.base_url }}assets/css/boot.css" rel="stylesheet">
 <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!--[if lt IE 9]>
   <script src="{{ page.base_url }}assets/js/html5shiv.js"></script>
