Initial Test for the New Design
Adding Footer and CSS to nitsef layout

--- a/_layouts/nitsef.html
+++ b/_layouts/nitsef.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <!-- Meta, title, CSS, favicons, etc. -->
-    {% include header.html %}
+    {% include boot-header.html %}
   </head>
   <body>
     <!-- Start Alexa Certify Javascript -->
@@ -22,6 +22,17 @@
 
     <!-- The Footer -->
     {% include footer.html %}
+
+
+
+<footer class="footer_well">
+  <div class="container"> Designed and built by Wimmark LTD<br>
+    Code licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0" target="_blank">Apache License v2.0</a>. Documentation licensed under <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank">CC BY 3.0</a>.<br>
+    Icons from <a href="http://glyphicons.com/" target="_blank">Glyphicons Free</a>, licensed under <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank">CC BY 3.0</a>.<br>
+    Flags from <a href="http://www.gosquared.com/" target="_blank">GoSquared</a>, licensed under <a href="http://bootstrapformhelpers.com/assets/img/bootstrap-formhelpers-countries.flags-LICENSE.txt" target="_blank">GoSquared</a>.</div>
+</footer>
+
+
 
   </body>
 </html>
