Remove Space After Nav

--- a/assets/css/boot.css
+++ b/assets/css/boot.css
@@ -25,6 +25,7 @@ body {
 	padding-top: 40px;
 	padding-bottom: 40px;
 	max-height: 400px;
+	margin-top:-5px;
 }
 .bootheader_buttons {
 	font-size: 18px;
