Adding Inner Page Style

--- a/_layouts/ndefault.html
+++ b/_layouts/ndefault.html
@@ -18,7 +18,7 @@
     
     <div class="well bootheader row">
   <div class="container">
-   {{ title }}
+   <h1 style="color:#fff;">{{ page.title }}</h1>
   </div>
 </div>
 <!-- End of Header -->
